Gnome 46: Fix unreadable text in calendar events

--- a/gtk-4.0/apps/_gnome.scss
+++ b/gtk-4.0/apps/_gnome.scss
@@ -238,9 +238,13 @@
 /*******************
  * Calendar events *
 ********************/
-.color-light{
-  & label, &.timed label {
+.color-light {
+  &.timed label, .event-popover label {
+    color: $fg_color;
+    opacity: 1;
+  }
+  & label {
     color: $nord0;
-    opacity:1;
+    opacity: 1;
   }
 }
